projects: fix RayTracing on small screens

--- a/assets/css/font.scss
+++ b/assets/css/font.scss
@@ -19,3 +19,7 @@
 // custom scss
 
 @import "custom/style";
+
+video {
+	width: 100%;
+}
